--- a/app/src/main/res/layout/widget_list_layout.xml
+++ b/app/src/main/res/layout/widget_list_layout.xml
@@ -19,7 +19,6 @@
     android:id="@+id/recipe_widget_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/background_dark"
     android:orientation="vertical">
 
     <TextView
@@ -29,12 +28,11 @@
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/margin_8dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:text="@string/ingredients"
         tools:text="Title" />
 
-    <LinearLayout
-        android:id="@+id/ll_recipe_widget_ingredient_list"
+    <ListView
+        android:id="@+id/ll_recipe_widget_ingredient_list_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        tools:listitem="@layout/widget_list_item" />
+        android:layout_height="wrap_content" />
 </LinearLayout>
