--- a/app/src/main/res/layout/fragment_detail_master_list.xml
+++ b/app/src/main/res/layout/fragment_detail_master_list.xml
@@ -30,13 +30,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/margin_8dp"
-            android:text="Add to widget" />
+            android:text="@string/add_ingredients_button_text" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:text="Ingridies"
+            android:layout_margin="@dimen/margin_16dp"
+            android:text="@string/ingredients"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <android.support.v7.widget.RecyclerView
@@ -49,8 +49,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:text="Steps"
+            android:layout_margin="@dimen/margin_16dp"
+            android:text="@string/steps"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <android.support.v7.widget.RecyclerView
