--- a/app/src/main/res/xml/widget_provider_info.xml
+++ b/app/src/main/res/xml/widget_provider_info.xml
@@ -16,10 +16,10 @@
   -->
 
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:initialKeyguardLayout="@layout/widget_layout"
+    android:initialKeyguardLayout="@layout/widget_list_layout"
     android:initialLayout="@layout/widget_provider"
     android:minHeight="40dp"
-    android:minWidth="120dp"
+    android:minWidth="110dp"
     android:previewImage="@drawable/baseline_cake_black_24dp"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="86400000"
