--- a/app/src/main/res/layout/widget_list_layout.xml
+++ b/app/src/main/res/layout/widget_list_layout.xml
@@ -15,7 +15,6 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/recipe_widget_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -26,13 +25,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="@dimen/margin_8dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:paddingTop="@dimen/margin_8dp"
         android:text="@string/ingredients"
-        tools:text="Title" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
     <ListView
         android:id="@+id/ll_recipe_widget_ingredient_list_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <!-- Empty view is show if list items are empty -->
+    <TextView
+        android:id="@+id/empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="@string/empty_string"
+        android:textColor="#ffffff"
+        android:textSize="20sp"
+        android:visibility="gone" />
 </LinearLayout>
