--- a/app/src/main/res/drawable/ic_circle.xml
+++ b/app/src/main/res/drawable/ic_circle.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <!--
-  ~ Copyright (C) 2018 The Android Open Source Project
+  ~ Copyright (C) 2018. The Android Open Source Project
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
   ~ You may obtain a copy of the License at
   ~
-  ~    http://www.apache.org/licenses/LICENSE-2.0
+  ~     http://www.apache.org/licenses/LICENSE-2.0
   ~
   ~ Unless required by applicable law or agreed to in writing, software
   ~ distributed under the License is distributed on an "AS IS" BASIS,
@@ -16,9 +15,8 @@
   ~ limitations under the License.
   -->
 
-<resources>
-    <color name="colorPrimary">#ffc107</color>
-    <color name="colorPrimaryDark">#c79100</color>
-    <color name="colorAccent">#000000</color>
-    <color name="white">#FFFFFF</color>
-</resources>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval" >
+    <solid android:color="#FFFFFF" />
+    <stroke android:color="#000000" android:width="1dp" />
+</shape>
