--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -17,54 +17,104 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/recipe_card_view"
+    android:id="@+id/ingredient_card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/margin_4dp"
+    android:layout_margin="@dimen/margin_2dp"
     android:foreground="?android:attr/selectableItemBackground"
     card_view:cardCornerRadius="@dimen/margin_4dp"
-    card_view:cardElevation="@dimen/margin_8dp">
+    card_view:cardElevation="@dimen/margin_2dp">
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/recipe_card_view_id_tv"
-            style="@android:style/TextAppearance.Medium"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            tools:text="1" />
+        android:layout_height="match_parent"
+        android:padding="@dimen/margin_8dp">
 
         <TextView
             android:id="@+id/recipe_card_view_name_tv"
             style="@android:style/TextAppearance.Large"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
+            android:layout_marginStart="@dimen/margin_8dp"
+            android:layout_marginTop="@dimen/margin_4dp"
+            android:fontFamily="@font/abril_fatface"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent"
             tools:text="name" />
 
         <TextView
-            android:id="@+id/recipe_card_view_servings_tv"
+            android:id="@+id/recipe_card_view_ingredients_tv"
             style="@android:style/TextAppearance.Small"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            android:text="@string/servings_format"/>
+            android:fontFamily="@font/abhaya_libre"
+            card_view:layout_constraintStart_toStartOf="@+id/recipe_card_view_name_tv"
+            card_view:layout_constraintTop_toBottomOf="@+id/recipe_card_view_name_tv"
+            tools:text="@string/ingredients_format" />
 
         <TextView
-            android:id="@+id/recipe_card_view_image_tv"
+            android:id="@+id/recipe_card_view_steps_tv"
             style="@android:style/TextAppearance.Small"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            tools:text="image" />
+            android:layout_marginBottom="@dimen/margin_4dp"
+            android:fontFamily="@font/abhaya_libre"
+            card_view:layout_constraintStart_toStartOf="@+id/recipe_card_view_name_tv"
+            card_view:layout_constraintTop_toBottomOf="@+id/recipe_card_view_ingredients_tv"
+            tools:text="@string/steps_format" />
 
-    </LinearLayout>
+        <ImageView
+            android:id="@+id/circle_shape"
+            android:layout_width="54dp"
+            android:layout_height="54dp"
+            android:layout_marginEnd="@dimen/margin_16dp"
+            android:src="@drawable/ic_circle"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/circle_inner_shape"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:src="@drawable/ic_circle"
+            card_view:layout_constraintBottom_toBottomOf="@+id/circle_shape"
+            card_view:layout_constraintEnd_toEndOf="@+id/circle_shape"
+            card_view:layout_constraintStart_toStartOf="@+id/circle_shape"
+            card_view:layout_constraintTop_toTopOf="@+id/circle_shape" />
+
+        <ImageView
+            android:id="@+id/fork"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/margin_8dp"
+            android:src="@drawable/ic_fork"
+            card_view:layout_constraintBottom_toBottomOf="@+id/circle_shape"
+            card_view:layout_constraintEnd_toStartOf="@+id/recipe_card_view_servings_tv"
+            card_view:layout_constraintTop_toTopOf="@+id/circle_shape" />
+
+        <ImageView
+            android:id="@+id/knife"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_8dp"
+            android:src="@drawable/ic_sharpen_knife"
+            card_view:layout_constraintBottom_toBottomOf="@+id/circle_shape"
+            card_view:layout_constraintStart_toEndOf="@+id/recipe_card_view_servings_tv"
+            card_view:layout_constraintTop_toTopOf="@+id/circle_shape" />
+
+        <TextView
+            android:id="@+id/recipe_card_view_servings_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/abhaya_libre"
+            android:textSize="48sp"
+            card_view:layout_constraintBottom_toBottomOf="@+id/circle_shape"
+            card_view:layout_constraintEnd_toEndOf="@+id/circle_shape"
+            card_view:layout_constraintStart_toStartOf="@+id/circle_shape"
+            card_view:layout_constraintTop_toTopOf="@+id/circle_shape"
+            tools:text="7" />
+
+    </android.support.constraint.ConstraintLayout>
+
 </android.support.v7.widget.CardView>
