--- a/app/src/main/res/layout/item_step.xml
+++ b/app/src/main/res/layout/item_step.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2018. The Android Open Source Project
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -24,14 +23,15 @@
     android:layout_margin="@dimen/margin_4dp"
     android:foreground="?android:attr/selectableItemBackground"
     card_view:cardCornerRadius="@dimen/margin_4dp"
-    card_view:cardElevation="@dimen/margin_8dp">
+    card_view:cardElevation="@dimen/margin_2dp">
 
-        <TextView
-            android:id="@+id/step_card_view_short_description_tv"
-            style="@style/Base.TextAppearance.AppCompat.Medium"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/margin_8dp"
-            tools:text="Recipe Introduction" />
+    <TextView
+        android:id="@+id/step_card_view_short_description_tv"
+        style="@style/Base.TextAppearance.AppCompat.Medium"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/abhaya_libre"
+        android:padding="@dimen/margin_8dp"
+        tools:text="Recipe Introduction" />
 
 </android.support.v7.widget.CardView>
