--- a/app/src/main/res/layout/widget_list_layout.xml
+++ b/app/src/main/res/layout/widget_list_layout.xml
@@ -18,16 +18,18 @@
     android:id="@+id/recipe_widget_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/recipe_widget_title"
-        android:layout_width="wrap_content"
+        style="@style/Base.TextAppearance.AppCompat.Large"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:paddingTop="@dimen/margin_8dp"
+        android:background="@color/colorPrimary"
+        android:padding="@dimen/margin_8dp"
         android:text="@string/ingredients"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+        android:textColor="@color/white" />
 
     <ListView
         android:id="@+id/ll_recipe_widget_ingredient_list_view"
@@ -37,11 +39,11 @@
     <!-- Empty view is show if list items are empty -->
     <TextView
         android:id="@+id/empty_view"
+        style="@style/Base.TextAppearance.AppCompat.Medium"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:text="@string/empty_string"
-        android:textColor="#ffffff"
-        android:textSize="20sp"
+        android:textColor="@color/colorAccent"
         android:visibility="gone" />
 </LinearLayout>
