--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -16,9 +16,9 @@
   ~ limitations under the License.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/refresh"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context="com.udacity.baking.ui.list.RecipeActivity">
@@ -30,4 +30,4 @@
         android:layout_marginLeft="2dp"
         android:layout_marginRight="2dp" />
 
-</LinearLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
