--- a/app/src/main/res/layout/fragment_detail_step.xml
+++ b/app/src/main/res/layout/fragment_detail_step.xml
@@ -29,14 +29,22 @@
         <com.google.android.exoplayer2.ui.PlayerView
             android:id="@+id/player_view"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginBottom="@dimen/margin_0dp"
             android:layout_marginLeft="@dimen/margin_0dp"
             android:layout_marginRight="@dimen/margin_0dp"
             android:layout_marginTop="@dimen/margin_0dp"
+            app:layout_constraintBottom_toTopOf="@+id/horizontal_half"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/horizontal_half"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.36" />
 
         <TextView
             android:id="@+id/step_description_tv"
