--- a/app/src/main/res/layout/fragment_detail_master_list.xml
+++ b/app/src/main/res/layout/fragment_detail_master_list.xml
@@ -15,7 +15,6 @@
   -->
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -26,7 +25,7 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/add_to_widget_buton"
+            android:id="@+id/add_to_widget_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
